✍ Renamed to Pluto.jl

--- a/assets/editor.html
+++ b/assets/editor.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<title>⚡ Saturn.jl ⚡</title>
+	<title>⚡ Pluto.jl ⚡</title>
 	<meta charset="utf-8" />
 	<script>
-		console.log("Saturn.jl, by Fons van der Plas (https://github.com/fonsp) and Mikołaj Bochenski (https://github.com/malyvsen) 🌈");
+		console.log("Pluto.jl, by Fons van der Plas (https://github.com/fonsp) and Mikołaj Bochenski (https://github.com/malyvsen) 🌈");
 	</script>
 	<meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
-	<link rel="license" href="https://github.com/fonsp/Saturn.jl/blob/master/LICENSE" />
+	<link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Saturn.jl notebook" />
+	<meta name="description" content="Pluto.jl notebook" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,300i,400,400i,500,500i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,400,500,600,700,800,900&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
@@ -272,7 +272,7 @@
 	<header>
 		<div id="logocontainer">
 			<h1>
-				SATURN<span>.jl</span></h1>
+				Pluto<span>.jl</span></h1>
 			<h2>
 				<span id="printernametitle">/editor</span></h2>
 		</div>
@@ -296,7 +296,7 @@
 
 	<footer>
 		<div id="info">
-			<a href="https://github.com/fonsp/Saturn.jl">Saturn.jl</a>, by <a href="https://github.com/fonsp" rel="author">fonsp</a> and <a href="https://github.com/malyvsen" rel="author">malyvsen</a>
+			<a href="https://github.com/fonsp/Pluto.jl">Pluto.jl</a>, by <a href="https://github.com/fonsp" rel="author">fonsp</a> and <a href="https://github.com/malyvsen" rel="author">malyvsen</a>
 		</div>
 	</footer>
 
